--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <!-- Hero Section -->
     <section class="min-h-screen flex flex-col justify-center items-center text-center px-4">
       <h1 class="text-5xl font-bold mb-4">Hi, I'm Sachin Gupta</h1>
-      <p class="text-xl mb-6 max-w-2xl">Product Manager building scalable B2B/B2C financial solutions. Obsessed with design, systems, and outcomes.</p>
+      <p class="text-xl mb-6 max-w-2xl">I am a Passionate Product Manager !!
+            Well, I am a product manager now, But I never dreamt of becoming one until my MBA, I have always thought of becoming a banker or somthing interesting. But look where the luck brought me ? I am a Product maneger in a bank. I have always been the jack of all trades, now I am tring to become master of 1. 1 by 1. Currently I love building scalable B2B/B2C financial solutions. Obsessed with design, systems, and outcomes.</p>
       <div class="space-x-4">
         <a href="#projects" class="px-6 py-2 border rounded-full hover:bg-white hover:text-black transition">View Projects</a>
         <a href="Sachin Gupta_ Product.pdf" class="px-6 py-2 border rounded-full hover:bg-white hover:text-black transition">Download Resume</a>
