--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main class="max-w-4xl mx-auto px-4 space-y-24">
       <section id="about">
         <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p class="text-gray-300">Your about content goes here...</p>
+        <p class="text-gray-300">I am a Passionate Product Manager !! Well, I am a product manager now, But I never dreamt of becoming one until my MBA, I have always thought of becoming a banker or somthing interesting. But look where the luck brought me ? I am a Product maneger in a bank. I have always been the jack of all trades, now I am tring to become master of 1. 1 by 1. Currently I love building scalable B2B/B2C financial solutions. Obsessed with design, systems, and outcomes.</p>
       </section>
 
       <section id="experience">
