--- a/index.html
+++ b/index.html
@@ -3,104 +3,225 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sachin Gupta - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>Sachin Gupta - Product Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <style>
-      html {
-        scroll-behavior: smooth;
-      }
-
+      /* Custom Cursor Hover Effect */
       body {
-        font-family: 'Inter', sans-serif;
-        background-color: #0a0a0a;
-        color: white;
-        cursor: none;
+        cursor: url('https://cdn.jsdelivr.net/gh/brittanychiang/brittanychiang.github.io/cursor.svg'), auto;
       }
 
-      .cursor {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 20px;
-        height: 20px;
-        border: 2px solid #ffffff;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-        z-index: 1000;
-        transition: transform 0.15s ease, width 0.3s ease, height 0.3s ease;
+      /* Main theme color */
+      :root {
+        --primary-color: #1c66b7; /* Blue color */
       }
 
-      .magnetic:hover .cursor {
-        transform: scale(1.5);
+      /* Link and hover colors */
+      a {
+        color: var(--primary-color);
+        transition: all 0.3s ease-in-out;
       }
 
-      .hover-target:hover {
-        transform: scale(1.02);
-        transition: transform 0.3s ease;
+      a:hover {
+        color: #fff;
+        transform: scale(1.1);
+      }
+
+      /* Navigation styles */
+      nav.sticky-nav a {
+        color: rgba(255, 255, 255, 0.8);
+      }
+
+      nav.sticky-nav a:hover {
+        color: rgba(255, 255, 255, 1);
+      }
+
+      /* Mobile menu styles */
+      #mobile-menu a {
+        color: rgba(255, 255, 255, 0.8);
+      }
+
+      #mobile-menu a:hover {
+        color: rgba(255, 255, 255, 1);
+      }
+
+      /* Project box styles */
+      .project-box {
+        background-color: #1e3a8a; /* Slightly darker blue */
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .project-box:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      }
+
+      .project-box h3 {
+        color: #fff;
+        font-size: 1.25rem;
+        margin-bottom: 1rem;
+      }
+
+      .project-box p {
+        color: #d1d5db;
+        font-size: 1rem;
+      }
+
+      .project-box p.mt-2 {
+        font-weight: 600;
+      }
+
+      /* About Section */
+      #about {
+        background-color: #f9fafb;
+        padding: 40px;
+        border-radius: 8px;
       }
     </style>
   </head>
-  <body>
-    <div class="cursor" id="custom-cursor"></div>
+  <body class="font-sans bg-gray-800 text-white">
 
-    <header class="h-screen flex items-center justify-center text-center">
-      <div>
-        <h1 class="text-5xl font-bold">Sachin Gupta</h1>
-        <p class="text-xl mt-4">Product Manager | Building financial experiences</p>
+    <!-- Sticky Header -->
+    <header class="hero py-6 px-8 shadow-md">
+      <div class="max-w-7xl mx-auto flex justify-between items-center">
+        <div>
+          <h1 class="text-4xl font-bold">Sachin Gupta</h1>
+          <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
+        </div>
+        <div>
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
+        </div>
       </div>
     </header>
 
-    <main class="max-w-4xl mx-auto px-4 space-y-24">
-      <section id="about">
+    <!-- Sticky Navigation -->
+    <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
+      <div class="max-w-4xl mx-auto flex justify-between items-center relative">
+        <div class="lg:hidden">
+          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
+        </div>
+        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-blue-900 to-blue-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
+          <a href="#about" class="hover:text-white transition-colors duration-200 ease-in-out">About</a>
+          <a href="#projects" class="hover:text-white transition-colors duration-200 ease-in-out">Projects</a>
+          <a href="#affiliations" class="hover:text-white transition-colors duration-200 ease-in-out">Affiliations</a>
+          <a href="#contact" class="hover:text-white transition-colors duration-200 ease-in-out">Contact</a>
+          <a href="#resume" class="hover:text-white transition-colors duration-200 ease-in-out">Resume</a>
+        </div>
+        <button id="theme-toggle" class="bg-blue-800 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition flex items-center">
+          <span id="theme-icon" class="material-icons">dark_mode</span>
+          <span class="ml-2">Toggle Theme</span>
+        </button>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
+
+      <!-- About Section -->
+      <section id="about" data-aos="fade-up">
         <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p class="text-gray-300">I am a Passionate Product Manager !! Well, I am a product manager now, But I never dreamt of becoming one until my MBA, I have always thought of becoming a banker or somthing interesting. But look where the luck brought me ? I am a Product maneger in a bank. I have always been the jack of all trades, now I am tring to become master of 1. 1 by 1. Currently I love building scalable B2B/B2C financial solutions. Obsessed with design, systems, and outcomes.</p>
+        <p>
+          I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
+        </p>
       </section>
 
-      <section id="experience">
-        <h2 class="text-3xl font-bold mb-4">Experience</h2>
+      <!-- Projects Section -->
+      <section id="projects" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-8">Projects</h2>
         <div class="space-y-6">
-          <!-- Repeatable job card -->
-          <div class="p-6 bg-gray-900 rounded-lg shadow-lg hover-target">
-            <h3 class="text-xl font-semibold">Role at Company</h3>
-            <p class="text-gray-400 text-sm">Duration</p>
-            <p class="mt-2 text-gray-300">Short description about role...</p>
+          <div class="project-box">
+            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+          </div>
+          <div class="project-box">
+            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+          </div>
+          <div class="project-box">
+            <h3 class="text-xl font-bold">Managing Government Business</h3>
+            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+          </div>
+          <div class="project-box">
+            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
           </div>
         </div>
       </section>
 
-      <section id="projects">
-        <h2 class="text-3xl font-bold mb-4">Projects</h2>
-        <div class="grid md:grid-cols-2 gap-6">
-          <!-- Repeatable project card -->
-          <div class="p-6 bg-gray-900 rounded-lg shadow-lg hover-target">
-            <h3 class="text-xl font-semibold">Project Title</h3>
-            <p class="text-gray-300 mt-2">Short project description...</p>
-          </div>
+      <!-- Affiliations Section -->
+      <section id="affiliations" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+        <div class="logo-grid mb-10">
+          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+          <img src="logo-zomato.png" alt="Zomato" />
+          <img src="logo-indicold.png" alt="Indicold" />
+          <img src="logo-unacademy.png" alt="Unacademy" />
+          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+          <img src="logo-big-league.png" alt="The Big League" />
         </div>
+        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
+        <div class="logo-grid">
+          <img src="irma.png" alt="IRMA" />
+          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+          <img src="logo-university-illinois.png" alt="University of Illinois" />
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-4">Contact</h2>
+        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-white underline">LinkedIn</a>.</p>
+      </section>
+
+      <!-- Resume Section -->
+      <section id="resume" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-4">Resume</h2>
+        <a href="Sachin Gupta_ Product.pdf" download class="text-white underline">Download Resume</a>
       </section>
     </main>
 
-    <footer class="text-center py-8 text-gray-600">
-      &copy; 2025 Sachin Gupta
+    <footer class="bg-blue-900 text-white py-6 text-center">
+      &copy; 2025 Sachin Gupta. All rights reserved.
     </footer>
 
     <script>
-      const cursor = document.getElementById('custom-cursor');
+      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
 
-      document.addEventListener('mousemove', e => {
-        cursor.style.top = `${e.clientY}px`;
-        cursor.style.left = `${e.clientX}px`;
+      const themeToggleButton = document.getElementById("theme-toggle");
+      const currentTheme = localStorage.getItem("theme") || "light";
+      document.body.classList.add(currentTheme);
+
+      themeToggleButton.addEventListener("click", () => {
+        if (document.body.classList.contains("light")) {
+          document.body.classList.remove("light");
+          document.body.classList.add("dark");
+          localStorage.setItem("theme", "dark");
+        } else {
+          document.body.classList.remove("dark");
+          document.body.classList.add("light");
+          localStorage.setItem("theme", "light");
+        }
       });
 
-      document.querySelectorAll('.hover-target').forEach(el => {
-        el.addEventListener('mouseenter', () => {
-          cursor.style.transform = 'translate(-50%, -50%) scale(2)';
-        });
-        el.addEventListener('mouseleave', () => {
-          cursor.style.transform = 'translate(-50%, -50%) scale(1)';
-        });
+      const hamburgerButton = document.getElementById("hamburger");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      hamburgerButton.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
       });
     </script>
   </body>
