--- a/index.html
+++ b/index.html
@@ -4,67 +4,120 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sachin Gupta - Product Manager</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <style>
-      /* Custom Cursor Hover Effect */
+      /* Set default theme colors and font */
+      :root {
+        --primary-color: #4f5dff; /* Brittany's blue color */
+        --accent-color: #1a202c; /* Dark theme background color */
+      }
+
+      /* Cursor Hover Effect */
       body {
         cursor: url('https://cdn.jsdelivr.net/gh/brittanychiang/brittanychiang.github.io/cursor.svg'), auto;
       }
 
-      /* Main theme color */
-      :root {
-        --primary-color: #1c66b7; /* Blue color */
+      /* Navigation Bar Styles */
+      nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 16px 20px;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 10;
       }
 
-      /* Link and hover colors */
-      a {
-        color: var(--primary-color);
-        transition: all 0.3s ease-in-out;
-      }
-
-      a:hover {
+      nav a {
         color: #fff;
-        transform: scale(1.1);
+        margin: 0 16px;
+        text-decoration: none;
+        font-weight: 600;
+        transition: all 0.3s ease;
       }
 
-      /* Navigation styles */
-      nav.sticky-nav a {
-        color: rgba(255, 255, 255, 0.8);
+      nav a:hover {
+        color: var(--primary-color);
+        transform: translateY(-3px);
       }
 
-      nav.sticky-nav a:hover {
-        color: rgba(255, 255, 255, 1);
+      /* Hero Section */
+      .hero {
+        background-image: url('your-hero-image.jpg'); /* Replace with your background image */
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: white;
+        font-family: 'Inter', sans-serif;
       }
 
-      /* Mobile menu styles */
-      #mobile-menu a {
-        color: rgba(255, 255, 255, 0.8);
+      .hero h1 {
+        font-size: 3.5rem;
+        font-weight: 700;
       }
 
-      #mobile-menu a:hover {
-        color: rgba(255, 255, 255, 1);
+      .hero p {
+        font-size: 1.2rem;
       }
 
-      /* Project box styles */
+      /* Section Styles */
+      section {
+        padding: 80px 20px;
+        text-align: center;
+        background-color: var(--accent-color);
+      }
+
+      section h2 {
+        font-size: 2rem;
+        font-weight: 600;
+      }
+
+      section p {
+        font-size: 1.1rem;
+        color: #d1d5db;
+        line-height: 1.5;
+        max-width: 700px;
+        margin: 0 auto;
+      }
+
+      .logo-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 10px;
+        margin-top: 20px;
+      }
+
+      .logo-grid img {
+        width: 100%;
+        height: auto;
+      }
+
+      /* Project Section */
       .project-box {
-        background-color: #1e3a8a; /* Slightly darker blue */
+        background-color: #2d3e66;
         padding: 20px;
         border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        transition: all 0.3s ease-in-out;
+        margin: 15px 0;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       }
 
       .project-box:hover {
         transform: translateY(-5px);
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
       }
 
       .project-box h3 {
+        font-size: 1.5rem;
         color: #fff;
-        font-size: 1.25rem;
-        margin-bottom: 1rem;
+        font-weight: 600;
       }
 
       .project-box p {
@@ -72,156 +125,111 @@
         font-size: 1rem;
       }
 
-      .project-box p.mt-2 {
+      .project-box .outcome {
         font-weight: 600;
+        margin-top: 10px;
+        color: #fff;
       }
 
-      /* About Section */
-      #about {
-        background-color: #f9fafb;
-        padding: 40px;
-        border-radius: 8px;
+      /* Footer */
+      footer {
+        text-align: center;
+        padding: 40px 0;
+        background-color: #0a192f;
+        color: #fff;
+      }
+
+      /* AOS (Animate On Scroll) custom styles */
+      .aos-init {
+        transition: transform 0.3s ease-out;
       }
     </style>
   </head>
-  <body class="font-sans bg-gray-800 text-white">
 
-    <!-- Sticky Header -->
-    <header class="hero py-6 px-8 shadow-md">
-      <div class="max-w-7xl mx-auto flex justify-between items-center">
-        <div>
-          <h1 class="text-4xl font-bold">Sachin Gupta</h1>
-          <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
-        </div>
-        <div>
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
-        </div>
-      </div>
-    </header>
-
-    <!-- Sticky Navigation -->
-    <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
-      <div class="max-w-4xl mx-auto flex justify-between items-center relative">
-        <div class="lg:hidden">
-          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
-        </div>
-        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-blue-900 to-blue-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
-          <a href="#about" class="hover:text-white transition-colors duration-200 ease-in-out">About</a>
-          <a href="#projects" class="hover:text-white transition-colors duration-200 ease-in-out">Projects</a>
-          <a href="#affiliations" class="hover:text-white transition-colors duration-200 ease-in-out">Affiliations</a>
-          <a href="#contact" class="hover:text-white transition-colors duration-200 ease-in-out">Contact</a>
-          <a href="#resume" class="hover:text-white transition-colors duration-200 ease-in-out">Resume</a>
-        </div>
-        <button id="theme-toggle" class="bg-blue-800 text-white px-4 py-2 rounded-full hover:bg-blue-700 transition flex items-center">
-          <span id="theme-icon" class="material-icons">dark_mode</span>
-          <span class="ml-2">Toggle Theme</span>
-        </button>
-      </div>
+  <body class="bg-black text-white font-inter">
+    <!-- Navigation Bar -->
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#affiliations">Affiliations</a>
+      <a href="#contact">Contact</a>
     </nav>
 
-    <!-- Main Content -->
-    <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
+    <!-- Hero Section -->
+    <section class="hero" id="hero">
+      <div class="text-center">
+        <h1>Sachin Gupta</h1>
+        <p>Product Manager | UX/UI | B2B & B2C FinTech</p>
+      </div>
+    </section>
 
-      <!-- About Section -->
-      <section id="about" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p>
-          I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
-        </p>
-      </section>
+    <!-- About Section -->
+    <section id="about" data-aos="fade-up">
+      <h2>About Me</h2>
+      <p>
+        I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
+      </p>
+    </section>
 
-      <!-- Projects Section -->
-      <section id="projects" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-8">Projects</h2>
-        <div class="space-y-6">
-          <div class="project-box">
-            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Managing Government Business</h3>
-            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-          </div>
-          <div class="project-box">
-            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
-            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
-          </div>
-        </div>
-      </section>
+    <!-- Projects Section -->
+    <section id="projects" data-aos="fade-up">
+      <h2>Projects</h2>
+      <div class="project-box" data-aos="fade-up">
+        <h3>UIDAI eKYC Integration</h3>
+        <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+        <p class="outcome">Outcome: Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+      </div>
 
-      <!-- Affiliations Section -->
-      <section id="affiliations" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-        <div class="logo-grid mb-10">
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
-          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-          <img src="logo-zomato.png" alt="Zomato" />
-          <img src="logo-indicold.png" alt="Indicold" />
-          <img src="logo-unacademy.png" alt="Unacademy" />
-          <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-          <img src="logo-big-league.png" alt="The Big League" />
-        </div>
-        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
-        <div class="logo-grid">
-          <img src="irma.png" alt="IRMA" />
-          <img src="logo-svpuat.jpeg" alt="SVPUAT" />
-          <img src="logo-university-illinois.png" alt="University of Illinois" />
-        </div>
-      </section>
+      <div class="project-box" data-aos="fade-up">
+        <h3>Decommissioning Legacy LOS</h3>
+        <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+        <p class="outcome">Outcome: Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+      </div>
 
-      <!-- Contact Section -->
-      <section id="contact" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-white underline">LinkedIn</a>.</p>
-      </section>
+      <div class="project-box" data-aos="fade-up">
+        <h3>Managing Government Business</h3>
+        <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+        <p class="outcome">Outcome: Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+      </div>
 
-      <!-- Resume Section -->
-      <section id="resume" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">Resume</h2>
-        <a href="Sachin Gupta_ Product.pdf" download class="text-white underline">Download Resume</a>
-      </section>
-    </main>
+      <div class="project-box" data-aos="fade-up">
+        <h3>Product Strategy at AIC-IL</h3>
+        <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+        <p class="outcome">Outcome: Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+      </div>
+    </section>
 
-    <footer class="bg-blue-900 text-white py-6 text-center">
-      &copy; 2025 Sachin Gupta. All rights reserved.
+    <!-- Affiliations Section -->
+    <section id="affiliations" data-aos="fade-up">
+      <h2>Industry Affiliations</h2>
+      <div class="logo-grid mb-10">
+        <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
+        <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
+        <img src="logo-zomato.png" alt="Zomato" />
+        <img src="logo-indicold.png" alt="Indicold" />
+        <img src="logo-unacademy.png" alt="Unacademy" />
+        <img src="logo-tata-trusts.png" alt="Tata Trusts" />
+        <img src="logo-big-league.png" alt="The Big League" />
+      </div>
+      <h2>Academic Affiliations</h2>
+      <div class="logo-grid">
+        <img src="irma.png" alt="IRMA" />
+        <img src="logo-svpuat.jpeg" alt="SVPUAT" />
+        <img src="logo-university-illinois.png" alt="University of Illinois" />
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2025 Sachin Gupta. All rights reserved.</p>
     </footer>
 
     <script>
-      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
-
-      const themeToggleButton = document.getElementById("theme-toggle");
-      const currentTheme = localStorage.getItem("theme") || "light";
-      document.body.classList.add(currentTheme);
-
-      themeToggleButton.addEventListener("click", () => {
-        if (document.body.classList.contains("light")) {
-          document.body.classList.remove("light");
-          document.body.classList.add("dark");
-          localStorage.setItem("theme", "dark");
-        } else {
-          document.body.classList.remove("dark");
-          document.body.classList.add("light");
-          localStorage.setItem("theme", "light");
-        }
-      });
-
-      const hamburgerButton = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      hamburgerButton.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
+      // AOS Initialization
+      AOS.init({
+        duration: 1000,
+        easing: 'ease-in-out',
+        once: true
       });
     </script>
   </body>
