--- a/index.html
+++ b/index.html
@@ -3,172 +3,104 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sachin Gupta - Product Manager</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <title>Sachin Gupta - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
+
       body {
         font-family: 'Inter', sans-serif;
-      }
-      /* Navigation Styling */
-      nav.sticky-nav a {
-        color: rgba(255, 255, 255, 0.8);
-      }
-      nav.sticky-nav a:hover {
-        color: rgba(255, 255, 255, 1);
-      }
-      /* Hero section styling */
-      .hero {
-        background: url('background-image.jpg') no-repeat center center fixed;
-        background-size: cover;
-        height: 100vh;
-      }
-      /* Sections */
-      #about, #projects, #affiliations {
-        position: relative;
-      }
-      /* About, Projects, Affiliations section positioning */
-      .sections-left {
-        position: absolute;
-        left: 20px;
-        top: 30%;
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-      }
-      .line {
-        width: 5px;
-        height: 100%;
-        background-color: #0077FF;
-      }
-      .affiliations img {
-        width: 150px;
-        height: auto;
-        margin-right: 20px;
-        transition: transform 0.3s ease;
-      }
-      .affiliations img:hover {
-        transform: scale(1.05);
-      }
-      .project-box {
-        background: rgba(255, 255, 255, 0.9);
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease;
-      }
-      .project-box:hover {
-        transform: translateY(-10px);
-      }
-      .footer {
-        background-color: #111;
+        background-color: #0a0a0a;
         color: white;
-        text-align: center;
-        padding: 20px;
+        cursor: none;
+      }
+
+      .cursor {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        border: 2px solid #ffffff;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        pointer-events: none;
+        z-index: 1000;
+        transition: transform 0.15s ease, width 0.3s ease, height 0.3s ease;
+      }
+
+      .magnetic:hover .cursor {
+        transform: scale(1.5);
+      }
+
+      .hover-target:hover {
+        transform: scale(1.02);
+        transition: transform 0.3s ease;
       }
     </style>
   </head>
-  <body class="bg-gray-900 text-white">
-    <!-- Hero Section -->
-    <header class="hero py-6 px-8 shadow-md flex justify-between items-center">
+  <body>
+    <div class="cursor" id="custom-cursor"></div>
+
+    <header class="h-screen flex items-center justify-center text-center">
       <div>
-        <h1 class="text-4xl font-bold">Sachin Gupta</h1>
-        <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
-      </div>
-      <div>
-        <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
+        <h1 class="text-5xl font-bold">Sachin Gupta</h1>
+        <p class="text-xl mt-4">Product Manager | Building financial experiences</p>
       </div>
     </header>
 
-    <!-- Sticky Navigation -->
-    <nav class="sticky-nav shadow-md py-3 px-4 text-white">
-      <div class="max-w-7xl mx-auto flex justify-between items-center">
-        <div class="lg:hidden">
-          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
-        </div>
-        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-gray-900 to-gray-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
-          <a href="#about" class="hover:text-white transition-colors duration-200 ease-in-out">About</a>
-          <a href="#projects" class="hover:text-white transition-colors duration-200 ease-in-out">Projects</a>
-          <a href="#affiliations" class="hover:text-white transition-colors duration-200 ease-in-out">Affiliations</a>
-          <a href="#contact" class="hover:text-white transition-colors duration-200 ease-in-out">Contact</a>
-          <a href="#resume" class="hover:text-white transition-colors duration-200 ease-in-out">Resume</a>
-        </div>
-        <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
-          <span id="theme-icon" class="material-icons">dark_mode</span>
-          <span class="ml-2">Toggle Theme</span>
-        </button>
-      </div>
-    </nav>
+    <main class="max-w-4xl mx-auto px-4 space-y-24">
+      <section id="about">
+        <h2 class="text-3xl font-bold mb-4">About</h2>
+        <p class="text-gray-300">Your about content goes here...</p>
+      </section>
 
-    <!-- Main Content -->
-    <main class="max-w-7xl mx-auto px-6 py-12 space-y-20">
-      <div class="sections-left">
-        <div class="line"></div>
-        <section id="about" data-aos="fade-up">
-          <h2 class="text-3xl font-bold mb-4">About</h2>
-          <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
-        </section>
-
-        <section id="projects" data-aos="fade-up">
-          <h2 class="text-3xl font-bold mb-8">Projects</h2>
-          <div class="space-y-6">
-            <div class="project-box">
-              <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-              <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-              <p class="mt-2 font-semibold">Outcome:</p>
-              <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
-            </div>
-            <div class="project-box">
-              <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-              <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-              <p class="mt-2 font-semibold">Outcome:</p>
-              <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-            </div>
+      <section id="experience">
+        <h2 class="text-3xl font-bold mb-4">Experience</h2>
+        <div class="space-y-6">
+          <!-- Repeatable job card -->
+          <div class="p-6 bg-gray-900 rounded-lg shadow-lg hover-target">
+            <h3 class="text-xl font-semibold">Role at Company</h3>
+            <p class="text-gray-400 text-sm">Duration</p>
+            <p class="mt-2 text-gray-300">Short description about role...</p>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <section id="affiliations" data-aos="fade-up">
-          <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-          <div class="logo-grid mb-10 flex flex-wrap">
-            <img src="logo-mother-dairy.webp" alt="Mother Dairy" class="w-32 h-32 mx-2" />
-            <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" class="w-32 h-32 mx-2" />
-            <img src="logo-zomato.png" alt="Zomato" class="w-32 h-32 mx-2" />
+      <section id="projects">
+        <h2 class="text-3xl font-bold mb-4">Projects</h2>
+        <div class="grid md:grid-cols-2 gap-6">
+          <!-- Repeatable project card -->
+          <div class="p-6 bg-gray-900 rounded-lg shadow-lg hover-target">
+            <h3 class="text-xl font-semibold">Project Title</h3>
+            <p class="text-gray-300 mt-2">Short project description...</p>
           </div>
-        </section>
-      </div>
-
-      <footer class="footer">
-        <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-400 hover:text-blue-500">LinkedIn</a> | 
-        <a href="Sachin Gupta_ Product.pdf" download class="text-white">Click here to download Resume</a>
-      </footer>
+        </div>
+      </section>
     </main>
 
-    <script>
-      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
-      
-      const themeToggleButton = document.getElementById("theme-toggle");
-      const currentTheme = localStorage.getItem("theme") || "dark";
-      document.body.classList.add(currentTheme);
+    <footer class="text-center py-8 text-gray-600">
+      &copy; 2025 Sachin Gupta
+    </footer>
 
-      themeToggleButton.addEventListener("click", () => {
-        if (document.body.classList.contains("dark")) {
-          document.body.classList.remove("dark");
-          document.body.classList.add("light");
-          localStorage.setItem("theme", "light");
-        } else {
-          document.body.classList.remove("light");
-          document.body.classList.add("dark");
-          localStorage.setItem("theme", "dark");
-        }
+    <script>
+      const cursor = document.getElementById('custom-cursor');
+
+      document.addEventListener('mousemove', e => {
+        cursor.style.top = `${e.clientY}px`;
+        cursor.style.left = `${e.clientX}px`;
       });
 
-      const hamburgerButton = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      hamburgerButton.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
+      document.querySelectorAll('.hover-target').forEach(el => {
+        el.addEventListener('mouseenter', () => {
+          cursor.style.transform = 'translate(-50%, -50%) scale(2)';
+        });
+        el.addEventListener('mouseleave', () => {
+          cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+        });
       });
     </script>
   </body>
